test/src/e2e_vm_tests/test_programs/should_fail/recover_path_lib_import/src/main.sw
contract;

use std::hash::;

fn recover_on_path() -> b256 {
    return sha256(u64::max());
}

fn recovery_witness() -> bool { 0 }
